# airflow-cegid

./: .astro-registry.yaml  .gitignore  Dockerfile  README.md  airflow.cfg  pyproject.toml  requirements.txt
.github/workflows/: main.yml
cegid_sftp/: __init__.py
cegid_sftp/hooks/: sftp.py
cegid_sftp/operators/: sftp.py
